--- a/src/app/theme/layout/admin/admin.component.html
+++ b/src/app/theme/layout/admin/admin.component.html
@@ -6,7 +6,7 @@
 <div class="no-nav-router-class">
   <div class="pcoded-wrapper"
     [ngClass]="{'container': this.gradientConfig.layout === 'horizontal' && this.gradientConfig.subLayout === 'horizontal-2'}">
-    <div class="pcoded-content">
+    <div class="pcoded-content pb-0 pt-3">
       <div class="pcoded-inner-content">
         <div class="main-body">
           <div class="page-wrapper">
