--- a/src/app/ui/dashboard/dashboard.component.html
+++ b/src/app/ui/dashboard/dashboard.component.html
@@ -62,25 +62,26 @@
             </div>
         </div>
         <div class="row m-0 pb-2 pt-1">
-            <div class="row col-md-8">
+            <div class="row col-md-6">
                 <div class="col-md-6 col-lg-4 col-xl-3 col-sm-5 text-center p-0">
                     <button class="col-md-10 btn excel-btn text-nowrap" (click)="excel()">
                         <i class="fa-file-excel far fas pr-2"></i>Excel
                     </button>
                 </div>
 
-                <!-- <div class="col-md-6 col-lg-4  col-xl-3 col-sm-5 text-center p-0">
-                    <button class="col-md-10 btn btn-secondary text-nowrap" (click)="print(selectedItem)">
+                <div class="col-md-6 col-lg-4  col-xl-3 col-sm-5 text-center p-0">
+                    <button [disabled]="!selectedItem" class="col-md-10 btn btn-secondary text-nowrap"
+                        (click)="gridToPrint(selectedItem)">
                         <i class="fa-print far fas pr-2"></i>Yazdır
                     </button>
-                </div> -->
+                </div>
             </div>
-            <div class="col-md-4 p-0">
+            <div class="col-md-6 p-0">
                 <div class="row">
                     <div class="col-md-2 mt-1 p-0">
                         <span>Firma Adı : </span>
                     </div>
-                    <div class="col-md-9 ml-2  p-0">
+                    <div class="col-md-10  p-0">
                         <kendo-dropdownlist [size]="'small'" [kendoDropDownFilter]="filterSettings"
                             [popupSettings]="{ appendTo: 'component' }" [filterable]="true" class="width"
                             [data]="ddFirma.f_list" [textField]="ddFirma.displayField" [valueField]="'FirmaId'"
